# DynamicVWAPTransformer

./: README.md  pyproject.toml
.github/workflows/: sig_transformer_vwap_ci.yml
examples_and_results/: GFT-nonsig.ipynb  GFTSig.ipynb
sig_transformer_vwap/: __init__.py  data_formater.py  losses.py  models.py
tests/: test_jax.py  test_tensorflow.py  test_torch.py
